<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/marketbg5"
    tools:context=".Market">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/clickUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_marginStart="50sp"
            android:background="#00FFFFFF"
            android:text="@string/n_50_n_5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="250sp"
            android:layout_marginTop="-72sp"
            android:contentDescription="@string/todo1"
            app:srcCompat="@drawable/horse" />

        <Button
            android:id="@+id/clickUp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"
            android:background="#00FFFFFF"
            android:text="@string/n_500_n_50"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="250sp"
            android:layout_marginTop="-72sp"
            android:contentDescription="@string/todo2"
            app:srcCompat="@drawable/mustang" />

        <Button
            android:id="@+id/clickUp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"
            android:background="#00FFFFFF"
            android:text="@string/n_1000_n_100"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="250sp"
            android:layout_marginTop="-72sp"
            app:srcCompat="@drawable/carriage"
            android:contentDescription="@string/todo3" />

        <Button
            android:id="@+id/clickUp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"
            android:background="#00FFFFFF"
            android:text="@string/n_10000_n_100" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="250sp"
            android:layout_marginTop="-72sp"
            app:srcCompat="@drawable/saloon"
            android:contentDescription="@string/todo4" />

        <Button
            android:id="@+id/clickUp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"
            android:background="#00FFFFFF"
            android:text="@string/n_50000_n_10000" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/bank"
            android:layout_marginStart="250sp"
            android:layout_marginTop="-72sp"
            android:contentDescription="@string/todo5" />

        <Button
            android:id="@+id/clickUp6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/n_1000000_n_1000"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/train"
            android:layout_marginStart="250sp"
            android:layout_marginTop="-72sp"
            android:contentDescription="@string/todo6" />

        <Button
            android:id="@+id/clickUp7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/n_2500_n_75"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/mate"
            android:layout_marginStart="250sp"
            android:layout_marginTop="-72sp"
            android:contentDescription="@string/todo7" />

    </LinearLayout>

</ScrollView>